--- a/composer.json
+++ b/composer.json
@@ -3,31 +3,35 @@
     "type": "phpbb-extension",
     "description": "Displays a logged in member their post count on the index page",
     "homepage": "https://www.restlessrancor.com",
-    "version": "0.0.2-dev",
+    "version": "0.0.3-dev",
     "time": "2018-10-19",
     "license": "GPL-2.0-only",
-    "authors": [
-        {
+    "authors": [{
             "name": "Restless Rancor",
             "email": "contact@restlessrancor.com",
             "homepage": "https://www.restlessrancor.com",
             "role": "Author"
-        },
-        {
+            },
+            {
             "name": "GanstaZ",
             "email": "ganstaz@hotmail.com",
             "homepage": "http://www.dlsz.eu/",
             "role": "Mentor"
-        }
-    ],
+    }],
     "require": {
-        "php": ">=5.3.3",
-        "composer/installers": "~1.0"
+            "php": ">=5.3.3",
+            "composer/installers": "~1.0"
     },
     "extra": {
-        "display-name": "Post Count on Index",
-        "soft-require": {
+            "display-name": "Post Count on Index",
+            "soft-require": {
             "phpbb/phpbb": ">=3.1.4,<3.2.0@dev"
-        }
+    },
+    "version-check": {
+            "host": "restlessrancor.com",
+            "directory": "/versions",
+            "filename": "postcountonindex.json",
+            "ssl": "true"
+            }
     }
 }
