--- a/config/services.yml
+++ b/config/services.yml
@@ -4,5 +4,6 @@ services:
         arguments:
             - '@user'
             - '@template'
+            - '@language'
         tags:
             - { name: event.listener }
