--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "phpbb-extension",
     "description": "Displays a logged in member their post count on the index page",
     "homepage": "https://www.restlessrancor.com",
-    "version": "0.0.6-dev",
+    "version": "0.1.2-dev",
     "time": "2018-10-19",
     "license": "GPL-2.0-only",
     "authors": [{
@@ -29,7 +29,7 @@
     },
     "version-check": {
             "host": "restlessrancor.com",
-            "directory": "/versions",
+            "directory": "/extensions/versions",
             "filename": "postcountonindex.json",
             "ssl": "true"
             }
