--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "type": "phpbb-extension",
     "description": "Displays a logged in member their post count on the index page",
     "homepage": "https://www.restlessrancor.com",
-    "version": "0.1.2-dev",
+    "version": "0.1.3-dev",
 
-    "time": "2018-10-19",
+    "time": "2018-10-22",
     "license": "GPL-2.0-only",
     "authors": [{
             "name": "Restless Rancor",
@@ -20,13 +20,13 @@
             "role": "Mentor"
     }],
     "require": {
-            "php": ">=5.3.3",
+            "php": ">=5.6",
             "composer/installers": "~1.0"
     },
     "extra": {
             "display-name": "Post Count on Index",
             "soft-require": {
-            "phpbb/phpbb": ">=3.1.4,<3.2.0@dev"
+            "phpbb/phpbb": ">=3.2.0,<3.3"
     },
     "version-check": {
             "host": "restlessrancor.com",
