--- a/config/services.yml
+++ b/config/services.yml
@@ -5,5 +5,6 @@ services:
             - '@user'
             - '@template'
             - '@language'
+            - '@config'
         tags:
             - { name: event.listener }
