--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "phpbb-extension",
     "description": "Displays a logged in member their post count on the index page",
     "homepage": "https://www.restlessrancor.com",
-    "version": "0.3.3-beta",
+    "version": "1.0.0-RC1",
 
     "time": "2018-10-22",
     "license": "GPL-2.0-only",
